Bug 112106 - Corrupted pivot table after XLSX -> XLS conversion in Calc
Summary: Corrupted pivot table after XLSX -> XLS conversion in Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords: dataLoss, filter:xls, filter:xlsx
Depends on:
Blocks: XLSX-Corrupted Pivot-Table-XLSX Pivot-Table-XLS
  Show dependency treegraph
 
Reported: 2017-08-30 13:07 UTC by Tamás Zolnai
Modified: 2019-04-30 13:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Corrupted XLS file exported from Calc (9.00 KB, application/vnd.ms-excel)
2017-08-30 13:08 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-30 13:07:41 UTC
Description:
After opening attachment 133861 [details] from bug 108343 , it's opened well displaying a simple pivot table. Then I save it in XLS format and try to open it in MS Excel (Excel 2016). Excel opens it in protected view, saying that the file has a problem (e.g. corrupted) and I can't edit it anymore.

Steps to Reproduce:
1. Open attachment 133861 [details] from bug 108343 in Calc
2. Save it to XLS file without doing anything with it in Calc
3. Open it in MS Excel

Actual Results:  
Excel opens the exported XLS in protected view and I can't edit the content.

Expected Results:
Excel should not detect any problem with the exported XLS.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
Comment 1 Tamás Zolnai 2017-08-30 13:08:59 UTC
Created attachment 135870 [details]
Corrupted XLS file exported from Calc
Comment 2 Commit Notification 2017-08-30 17:28:35 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a2f2a40e37aadc0a32435a33402a21a678464ba4

tdf#112106: Corrupted pivot table after XLSX -> XLS conversion in Calc

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.