tdf#112106: Corrupted pivot table after XLSX -> XLS conversion in Calc

Always write out a data layout name.

Reviewed-on: https://gerrit.libreoffice.org/41739
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit a2f2a40e37aadc0a32435a33402a21a678464ba4)

Change-Id: Ic0b43d9c0365eca5e417fe9f2fe4b77b538f3278